--- a/portfolio.html
+++ b/portfolio.html
@@ -95,14 +95,14 @@
     <div class="row">
       <div class="col-sm-6 col-xs-12">
         <div class="box3">
-          <img src="./Assets/Images/Password-Generator.jpg" alt="Password Generator">
+          <img src="./Assets/Images/TimeTracker.png" alt="Time Tracker">
           <div class="text">
             <h5>Password Generator</h5>
             <!-- Links to GitHub deployed website and github code -->
-            <a id="anchor5" href="https://dazacher.github.io/Password-Generator/" target="_blank">Deployed
+            <a id="anchor5" href="https://time-tracker-v-2.herokuapp.com/login" target="_blank">Deployed
               Website</a><br>
-            <a id="anchor6" href="https://github.com/dazacher/Password-Generator" target="_blank">GitHub Code</a>
-            <p>Applications: HTML, CSS, JavaScript</p>
+            <a id="anchor6" href="https://github.com/tomtimusprime/Time-Tracker-v2" target="_blank">GitHub Code</a>
+            <p>Applications: Node.js, Express.js, MySql, Sequelize, Travis CI/CD, Passport.js, ESLint, Moment, bCrypt, CSS, HTML, Bootstrap, JavaScript, API’s, AJAX, JSON, Git Bash, GitHub, Heroku, JawsDB </p>
           </div>
         </div>
       </div>
