trying to fix meta tag for linkedin.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <link rel="icon" href="./Assets/Images/favicon.png" type="image/x-icon/">
-  <meta property='og:image' content="/Assets/Images/Me.png"/>
+  <meta prefix="og: http://ogp.me/ns#" property="og:image" content="/Assets/Images/Me.png"/>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <script src="https://kit.fontawesome.com/6d15c51378.js" crossorigin="anonymous"></script>
