--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
   <meta name="Dee Ann Scanniello" property="og:image" content="/Assets/Images/Me.png">
+  <meta property="og:title" content="Portfolio" />
+  <meta property="og:description" content="Dee Ann Scanniello Image" />
+  <meta property="og:url" content="https://dazacher.github.io/Portfolio/" />
+
   <link rel="icon" href="./Assets/Images/favicon.png" type="image/x-icon/">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -66,12 +70,18 @@
         <!-- Picture of myself and a couple of paragraphs about myself-->
         <p><img class="img-responsive" src="Assets/Images/Me.png" alt="Dee Ann Scanniello">
 
-          My name is Dee Ann Scanniello. I am a Full Stack Web Developer, self-driven, easily adaptable and flexible, with a knack
-          for attention to detail. I have a passion for full stack development. Quick learner, who enjoys challenges and resolving 
-          problems. A graduate from the University of Arizona Bootcamp with a Certificate in Full Stack Web Development and a Bachelor’s
-          degree from DeVry University in Computer Information Systems. Skilled in JavaScript, jQuery, Bootstrap, AJAX, Git Bash, 
-          Sequealize, Node.js, Express.js, Inquirer, React.js, MySql2, Git Hub, Travis CI, Handlebars.js, OOP, Heroku, RESTful API's 
-          and Visual Studio. Independent, organized, motivated, detail-oriented, and have a special skill at final testing software. 
+          My name is Dee Ann Scanniello. I am a Full Stack Web Developer, self-driven, easily adaptable and flexible,
+          with a knack
+          for attention to detail. I have a passion for full stack development. Quick learner, who enjoys challenges and
+          resolving
+          problems. A graduate from the University of Arizona Bootcamp with a Certificate in Full Stack Web Development
+          and a Bachelor’s
+          degree from DeVry University in Computer Information Systems. Skilled in JavaScript, jQuery, Bootstrap, AJAX,
+          Git Bash,
+          Sequealize, Node.js, Express.js, Inquirer, React.js, MySql2, Git Hub, Travis CI, Handlebars.js, OOP, Heroku,
+          RESTful API's
+          and Visual Studio. Independent, organized, motivated, detail-oriented, and have a special skill at final
+          testing software.
           Looking to grow as a programmer and eventually become a mentor to others.</p>
       </div>
     </div>
@@ -84,7 +94,8 @@
           <ul>
             <!-- Link to my email address so someone can email me. -->
             <strong>
-              <li><img class="indexImages" src="./Assets/Images/mail-icon-purple-on-clear-th.png"><a href="mailto:dazacher2000@yahoo.com? subject=subject text"> Dee Ann Scanniello </a> </li>
+              <li><img class="indexImages" src="./Assets/Images/mail-icon-purple-on-clear-th.png"><a
+                  href="mailto:dazacher2000@yahoo.com? subject=subject text"> Dee Ann Scanniello </a> </li>
             </strong>
             <!-- Link to my GitHub page -->
             <strong>
