Updated portfolio layout/color/font

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <script src="https://kit.fontawesome.com/6d15c51378.js" crossorigin="anonymous"></script>
   <!--Link to google font  -->
+  <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet">
   <!-- We need to bring in the bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -33,7 +34,7 @@
 
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <!-- Name and link link to about me page on the navbar -->
     <a class="navbar-brand" href="./index.html">Dee Ann Scanniello</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -61,6 +62,16 @@
 
   <div class="container" id="index">
     <div class="row">
+      <div class="col-12 pull-left">
+        <!-- Picture of myself and a couple of paragraphs about myself-->
+        <img class="img-responsive" id="deeannImg" src="Assets/Images/Me.png" alt="Dee Ann Scanniello">
+        <div class="container" id="dafs">
+          <p id="deeann">I am Dee Ann...</p>
+          <p id="fullstack">a full stack web developer</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
       <div class="col-12">
         <h2>About Me</h2>
       </div>
@@ -68,7 +79,7 @@
     <div class="row">
       <div class="col-12 pull-left">
         <!-- Picture of myself and a couple of paragraphs about myself-->
-        <p><img class="img-responsive" src="Assets/Images/Me.png" alt="Dee Ann Scanniello">
+        <p>
 
           My name is Dee Ann Scanniello. I am a Full Stack Web Developer, self-driven, easily adaptable and flexible,
           with a knack
