--- a/contact.html
+++ b/contact.html
@@ -2,15 +2,16 @@
 <html lang="en">
 
 <head>
-    
+
     <link rel="icon" href="./Assets/Images/favicon.png" type="image/x-icon/">
     <meta charset="UTF-8">
     <meta property='og:image' content="/Assets/Images/Me.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />   
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <!--Link to google font  -->
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
     <!-- We need to bring in the bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
@@ -31,7 +32,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <!-- Name and link link to about me page on the navbar -->
         <a class="navbar-brand" href="./index.html">Dee Ann Scanniello</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -59,11 +60,11 @@
     </nav>
     <!-- Container to hold the line and Contact header in -->
     <div class="container">
-    <div class="row">
-        <div class="col-xs-12">
-            <h2>Contact</h2>
+        <div class="row">
+            <div class="col-xs-12">
+                <h2>Contact</h2>
+            </div>
         </div>
-    </div>
         <div class="row" id="straight-line">
             <div class="col-xs-12">
 
@@ -71,7 +72,7 @@
         </div>
         </container>
         <!-- Put form in a container -->
-        <container>
+        <div class="container">
             <!-- Start of the form -->
             <form action="mailto:dazacher2000@yahoo.com" method="post" enctype="multipart/form-data" name="EmailForm">
                 <!-- Form Started -->
@@ -93,8 +94,8 @@
                                         </div>
                                         <div class="form-group">
                                             <label><i class="fa fa-comment" aria-hidden="true"></i> Message</label>
-                                            <textarea rows="3" name="message" class="form-control"
-                                               maxlength="3000" placeholder="Type Your Message" required></textarea>
+                                            <textarea rows="3" name="message" class="form-control" maxlength="3000"
+                                                placeholder="Type Your Message" required></textarea>
                                         </div>
 
                                         <div class="form-group">
@@ -168,11 +169,11 @@
                         });
                     });
                 </script>
-                
+
                 <!-- Form Ended -->
             </form>
-        </container>
-    </div>
+            </container>
+        </div>
 
     </div>
 
