--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 
   <!-- Link for google font -->
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
   <!-- Link for Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
@@ -31,7 +31,7 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <!-- Image on myself on the Navbar. Also a link back to the about me page. -->
     <a class="navbar-brand" href="./index.html">Dee Ann Scanniello</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -97,7 +97,7 @@
         <div class="box3">
           <img src="./Assets/Images/TimeTracker.png" alt="Time Tracker">
           <div class="text">
-            <h5>Password Generator</h5>
+            <h5>Time Tracker</h5>
             <!-- Links to GitHub deployed website and github code -->
             <a id="anchor5" href="https://time-tracker-v-2.herokuapp.com/login" target="_blank">Deployed
               Website</a><br>
