Got responsiveness of index page to work properly.

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <link rel="icon" href="./Assets/Images/favicon.png" type="image/x-icon/">
+    <link rel="icon" href="./public/Assets/Images/favicon.png" type="image/x-icon/">
     <meta charset="UTF-8">
     <meta property='og:image' content="/Assets/Images/Me.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -25,7 +25,7 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
     <!-- Link to personal style sheet -->
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./public/styles/style.css" />
 
     <title>Dee Ann Scanniello Bio</title>
 </head>
