Make everything look the same on portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -91,9 +91,18 @@
           <div class="text">
             <h5>Weather Dashboard</h5>
             <!-- Links to GitHub deployed website and github code -->
-            <a id="anchor3" href="https://dazacher.github.io/Weather-Dashboard/" target="_blank">Deployed
-              Website</a><br>
-            <a id="anchor4" href="https://github.com/dazacher/Weather-Dashboard" target="_blank">GitHub Code</a>
+            <div class="row">
+              <div class="col-6 anchor">
+                <a id="anchor3" class="button" href="https://dazacher.github.io/Weather-Dashboard/"
+                  target="_blank">Deployed
+                  Website</a>
+              </div>
+              <div class="col-6 anchor">
+                <a id="anchor4" class="button" href="https://github.com/dazacher/Weather-Dashboard"
+                  target="_blank">GitHub
+                  Code</a>
+              </div>
+            </div>
             <p>Applications: Bootstrap, JavaScript, jQuery, LocalStorage</p>
           </div>
         </div>
@@ -107,23 +116,40 @@
           <div class="text">
             <h5>Time Tracker</h5>
             <!-- Links to GitHub deployed website and github code -->
-            <a id="anchor5" href="https://time-tracker-v-2.herokuapp.com/login" target="_blank">Deployed
-              Website</a><br>
-            <a id="anchor6" href="https://github.com/tomtimusprime/Time-Tracker-v2" target="_blank">GitHub Code</a>
+            <div class="row">
+              <div class="col-6 anchor">
+                <a id="anchor5" class="button" href="https://time-tracker-v-2.herokuapp.com/login"
+                  target="_blank">Deployed
+                  Website</a>
+              </div>
+              <div class="col-6 anchor">
+                <a id="anchor6" class="button" href="https://github.com/tomtimusprime/Time-Tracker-v2"
+                  target="_blank">GitHub Code</a>
+              </div>
+            </div>
             <p>Applications: Node.js, Express.js, MySql, Sequelize, Travis CI/CD, Passport.js, ESLint, Moment, bCrypt,
               CSS, HTML, Bootstrap, JavaScript, API’s, AJAX, JSON, Git Bash, GitHub, Heroku, JawsDB </p>
           </div>
         </div>
       </div>
       <!-- Fourth picture on my portfolio page.t-->
+
       <div class="col-sm-6 col-xs-12">
         <div class="box4">
           <img src="./public/Assets/Images/Eat-Da-Burger.jpg" alt="Eat-Da_Burger">
           <div class="text">
             <h5>Eat-Da-Burger</h5>
             <!-- Links to GitHub deployed website and github code -->
-            <a id="anchor7" href="https://eat-da-burger-das.herokuapp.com/" target="_blank">Deployed Website</a><br>
-            <a id="anchor8" href="https://github.com/dazacher/Eat-Da-Burger" target="_blank">GitHub Code</a>
+            <div class="row">
+              <div class="col-6 anchor">
+                <a id="anchor7" class="button" href="https://eat-da-burger-das.herokuapp.com/" target="_blank">Deployed
+                  Website</a>
+              </div>
+              <div class="col-6 anchor">
+                <a id="anchor8" class="button" href="https://github.com/dazacher/Eat-Da-Burger" target="_blank">GitHub
+                  Code</a>
+              </div>
+            </div>
             <p>Applications: Handlebars.js, Node.js, MySql, Express, Heroku</p>
           </div>
         </div>
@@ -136,9 +162,17 @@
             <div class="text">
               <h5>Work Day Scheduler</h5>
               <!-- Links to GitHub deployed website and github code -->
-              <a id="anchor9" href="https://dazacher.github.io/Work_Day_Scheduler/" target="_blank">Deployed
-                Website</a><br>
-              <a id="anchor10" href="https://github.com/dazacher/Work_Day_Scheduler" target="_blank">GitHub Code</a>
+              <div class="row">
+                <div class="col-6 anchor">
+                  <a id="anchor9" class="button" href="https://dazacher.github.io/Work_Day_Scheduler/"
+                    target="_blank">Deployed
+                    Website</a>
+                </div>
+                <div class="col-6 anchor">
+                  <a id="anchor10" class="button" href="https://github.com/dazacher/Work_Day_Scheduler"
+                    target="_blank">GitHub Code</a>
+                </div>
+              </div>
               <p>Applications: Bootstrap, HTML, CSS </p>
             </div>
           </div>
@@ -151,7 +185,13 @@
               <h5>OOP Programming</h5>
               <!--Link github code -->
               <!-- <a id="anchor11" href="" target="_blank">Deployed Website</a><br> -->
-              <a id="anchor12" href="https://github.com/dazacher/OOP-Programming" target="_blank">GitHub Code</a>
+              <div class="row">
+                <div class="col-6 anchor" text-align="center">
+                  <a id="anchor12" class="button" href="https://github.com/dazacher/OOP-Programming"
+                    target="_blank">GitHub
+                    Code</a>
+                </div>
+              </div>
               <p>Applications: Inquirer, HTML, JavaScript, CSS</p>
             </div>
           </div>
