Got layout of portfolio page fixed.

--- a/portfolio.html
+++ b/portfolio.html
@@ -186,7 +186,7 @@
               <!--Link github code -->
               <!-- <a id="anchor11" href="" target="_blank">Deployed Website</a><br> -->
               <div class="row">
-                <div class="col-12 anchor" text-align="center">
+                <div class="col-12 anchor">
                   <a id="anchor12" class="button" href="https://github.com/dazacher/OOP-Programming"
                     target="_blank">GitHub
                     Code</a>
