Finished updating the index page.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     crossorigin="anonymous"></script>
   <!-- Link to personal style sheet -->
   <link rel="stylesheet" href="./public/styles/style.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css">
 
   <title>Dee Ann Scanniello Bio</title>
 </head>
@@ -70,12 +71,12 @@
       </div>
       <div class="col-xs-12 col-md-9" id="dafs">
         <!-- <div class="container" > -->
-          <!-- <div class="row" > -->
-            <h1>I am Dee Ann...</h1>
-          <!-- </div> -->
-          <!-- <div class="row"> -->
-            <p id="fullstack">a full stack web developer</p>
-          <!-- </div> -->
+        <!-- <div class="row" > -->
+        <h1>I am Dee Ann...</h1>
+        <!-- </div> -->
+        <!-- <div class="row"> -->
+        <p id="fullstack">a full stack web developer</p>
+        <!-- </div> -->
         <!-- </div> -->
       </div>
     </div>
@@ -106,35 +107,36 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-12">
-        <h2>Contact Info</h2>
-      </div>
-      <div clas="row">
-        <div class="col-12">
-          <ul>
-            <!-- Link to my email address so someone can email me. -->
-            <strong>
-              <li><img class="indexImages" src="./public/Assets/Images/mail-icon-purple-on-clear-th.png"><a
-                  href="mailto:dazacher2000@yahoo.com? subject=subject text"> Dee Ann Scanniello </a> </li>
-            </strong>
-            <!-- Link to my GitHub page -->
-            <strong>
-              <li><img class="indexImages" src="./public/Assets/Images/GitHub2.png"><a
-                  href="https://github.com/dazacher" target="_blank"> https://github.com/dazacher</a></li>
-            </strong>
-            <!-- Link to my Resume page -->
-            <strong>
-              <li><img class="indexImages" src="./public/Assets/Images/resume.png"><a
-                  href="./Assets//Dee_Ann_Scanniello_Resume_Web_Developer_Full_Stack.pdf"> Dee Ann Scanniello</a></li>
-            </strong>
-            <!-- Link to my LinkedIn page -->
-            <strong>
-              <li><img class="indexImages" src="./public/Assets/Images/linkedin2.png"> <a
-                  href="https://linkedin.com/in/deeannscanniello" target="_blank">
-                  https://www.linkedin.com/in/deeannscanniello/</a></li>
-            </strong>
-          </ul>
-        </div>
+      <div class="col-12 contactInfo">
+        <!-- <ul> -->
+        <!-- Link to my email address so someone can email me. -->
+        <!-- <strong> -->
+        <!-- <li> -->
+        <a href="mailto:dazacher2000@yahoo.com? subject=subject text">
+          <i class="fa fa-envelope fa-3x"></i></a>
+        <!-- </li> -->
+        <!-- </strong> -->
+        <!-- Link to my GitHub page -->
+        <!-- <strong> -->
+        <!-- <li> -->
+        <a href="https://github.com/dazacher" target="_blank">
+          <i class="fab fa-github-square fa-3x"></i></a>
+        <!-- </li> -->
+        <!-- </strong> -->
+        <!-- Link to my Resume page -->
+        <!-- <strong> -->
+        <!-- <li> -->
+        <a href="./public/Assets/Dee_Ann_Scanniello_Resume_Web_Developer_Full_Stack.pdf">
+          <i class="fas fa-file fa-3x"></i></a>
+        <!-- </li> -->
+        <!-- </strong> -->
+        <!-- Link to my LinkedIn page -->
+        <!-- <strong> -->
+        <!-- <li> -->
+        <a href="https://linkedin.com/in/deeannscanniello" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+        <!-- </li> -->
+        <!-- </strong> -->
+        <!-- </ul> -->
       </div>
     </div>
   </div>
