Changed file layout structure more like MVC.

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
           <a class="nav-item nav-link"
             href="./public/Assets/Dee_Ann_Scanniello_Resume_Web_Developer_Full_Stack.pdf">Resume</a>
           <!-- Link to the Portfolio page -->
-          <a class="nav-item nav-link" href="./portfolio.html">Portfolio</a>
+          <a class="nav-item nav-link" href="./public/portfolio.html">Portfolio</a>
           <!-- Link to the Contact page -->
-          <a class="nav-item nav-link" href="./contact.html">Contact</a>
+          <a class="nav-item nav-link" href="./public/contact.html">Contact</a>
         </div>
       </div>
     </div>
