--- a/public/contact.html
+++ b/public/contact.html
@@ -25,7 +25,7 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
     <!-- Link to personal style sheet -->
-    <link rel="stylesheet" href="./public/styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
 
     <title>Dee Ann Scanniello Bio</title>
 </head>
@@ -34,7 +34,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <!-- Name and link link to about me page on the navbar -->
-        <a class="navbar-brand" href="./index.html">Dee Ann Scanniello</a>
+        <a class="navbar-brand" href="../index.html">Dee Ann Scanniello</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -44,7 +44,7 @@
             <div class="flex-row-reverse">
                 <div class="navbar-nav">
                     <!-- Link to the About me page -->
-                    <a class="nav-item nav-link active" href="./index.html">About Me <span
+                    <a class="nav-item nav-link active" href="../index.html">About Me <span
                             class="sr-only">(current)</span></a>
                     <!-- Link to the Resume page -->
                     <a class="nav-item nav-link"
