--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -24,7 +24,7 @@
     crossorigin="anonymous"></script>
 
   <!-- Link for personal style sheet -->
-  <link rel="stylesheet" href="./public/styles/style.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
 </head>
 
 <body>
@@ -32,7 +32,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark">
     <!-- Image on myself on the Navbar. Also a link back to the about me page. -->
-    <a class="navbar-brand" href="./index.html">Dee Ann Scanniello</a>
+    <a class="navbar-brand" href="../index.html">Dee Ann Scanniello</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,7 @@
       <ul class="navbar-nav">
         <li class="nav-item active">
           <!-- Link to About Me page -->
-          <a class="nav-link" href="./index.html">About Me <span class="sr-only"></span></a>
+          <a class="nav-link" href="../index.html">About Me <span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
           <!-- Link to Resume PDF Page -->
@@ -64,7 +64,7 @@
     <div class="row">
       <div class="col-sm-6 col-xs-12">
         <div class="box1">
-          <img src="./public/Assets/Images/Trivia-with-Friends.jpg" alt="Trivia with Friends"><br>
+          <img src="./Assets/Images/Trivia-with-Friends.jpg" alt="Trivia with Friends"><br>
           <div class="text">
             <h5>Trivia with Friends</h5>
             <!-- Links to GitHub deployed website and github code -->
@@ -87,7 +87,7 @@
       <!-- Second picture on my portfolio page. -->
       <div class="col-sm-6 col-xs-12">
         <div class="box2">
-          <img src="./public/Assets/Images/Weather-Dashboard.jpg" alt="Weather Dashboard">
+          <img src="./Assets/Images/Weather-Dashboard.jpg" alt="Weather Dashboard">
           <div class="text">
             <h5>Weather Dashboard</h5>
             <!-- Links to GitHub deployed website and github code -->
@@ -112,7 +112,7 @@
     <div class="row">
       <div class="col-sm-6 col-xs-12">
         <div class="box3">
-          <img src="./public/Assets/Images/TimeTracker.png" alt="Time Tracker">
+          <img src="./Assets/Images/TimeTracker.png" alt="Time Tracker">
           <div class="text">
             <h5>Time Tracker</h5>
             <!-- Links to GitHub deployed website and github code -->
@@ -136,7 +136,7 @@
 
       <div class="col-sm-6 col-xs-12">
         <div class="box4">
-          <img src="./public/Assets/Images/Eat-Da-Burger.jpg" alt="Eat-Da_Burger">
+          <img src="./Assets/Images/Eat-Da-Burger.jpg" alt="Eat-Da_Burger">
           <div class="text">
             <h5>Eat-Da-Burger</h5>
             <!-- Links to GitHub deployed website and github code -->
@@ -158,7 +158,7 @@
       <div class="row">
         <div class="col-sm-6 col-xs-12">
           <div class="box5">
-            <img src="./public/Assets/Images/Work-Day-Scheduler.jpg" alt="Work Day Scheduler"><br>
+            <img src="./Assets/Images/Work-Day-Scheduler.jpg" alt="Work Day Scheduler"><br>
             <div class="text">
               <h5>Work Day Scheduler</h5>
               <!-- Links to GitHub deployed website and github code -->
@@ -180,7 +180,7 @@
         <!-- Sixth picture on my portfolio page. -->
         <div class="col-sm-6 col-xs-12">
           <div class="box6">
-            <img src="./public/Assets/Images/OOP-Programming.jpg" alt="OOP-Programming">
+            <img src="./Assets/Images/OOP-Programming.jpg" alt="OOP-Programming">
             <div class="text">
               <h5>OOP Programming</h5>
               <!--Link github code -->
