totally reformatted portfolio page.

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -61,15 +61,164 @@
 
   <div class="container" id="portfolio">
     <!-- Link to my first project -->
-    <div class="row">
+    <div class="row row-cols-1 row-cols-md-3">
+      <div class="col mb-4">
+        <div class="card h-100">
+          <img src="./Assets/Images/Trivia-with-Friends.jpg" alt="Trivia with Friends" class="card-img-top">
+          <div class="card-body">
+            <div class="text">
+              <h5 class="card-title anchor">Trivia with Friends</h5>
+              <p class="card-text">Applications: Bulma CSS, jQuery, API's, SoundManager2, AJAX, JSON, Git Bash, GitHub
+              </p>
+              <div class="row">
+                <!-- Links to GitHub deployed website and github code -->
+                <div class="col-6 anchor">
+                  <a id="anchor1" class="button" href="https://dazacher.github.io/Trivia-With-Friends/"
+                    target="_blank">Website</a>
+                </div>
+                <div class="row"></div>
+                <div class="col-6 anchor">
+                  <a id="anchor2" class="button" href="https://github.com/dazacher/Trivia-With-Friends"
+                    target="_blank">GitHub Code</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End of Card -->
+      <div class="col mb-4">
+        <div class="card h-100">
+          <img src="./Assets/Images/Weather-Dashboard.jpg" alt="Weather Dashboard" class="card-img-top">
+          <div class="card-body">
+            <div class="text">
+              <h5 class="card-title anchor">Weather Dashboard</h5>
+              <p class="card-text">Applications: Bootstrap, JavaScript, jQuery, LocalStorage
+              </p><br>
+              <div class="row">
+                <div class="col-6 anchor">
+                  <a id="anchor3" class="button" href="https://dazacher.github.io/Weather-Dashboard/"
+                    target="_blank">Website</a>
+                </div>
+                <div class="col-6 anchor">
+                  <a id="anchor4" class="button" href="https://github.com/dazacher/Weather-Dashboard"
+                    target="_blank">GitHub
+                    Code</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- End of Card -->
+      <div class="col mb-4">
+        <div class="card h-100">
+          <img src="./Assets/Images/TimeTracker.png" alt="Time Tracker" class="card-img-top">
+          <div class="card-body">
+            <div class="text">
+              <h5 class="card-title anchor">Time Tracker</h5>
+              <p class="card-text">Applications: Node.js, Express.js, MySql, Sequelize, Travis CI/CD, Passport.js,
+                ESLint, Moment,
+                bCrypt, CSS, HTML, Bootstrap, JavaScript, API’s, AJAX, JSON, Git Bash, GitHub, Heroku, JawsDB
+              </p>
+              <div class="row">
+                <div class="col-6 anchor">
+                  <a id="anchor5" class="button" href="https://time-tracker-v-2.herokuapp.com/login"
+                    target="_blank">Website</a>
+                </div>
+                <div class="col-6 anchor">
+                  <a id="anchor6" class="button" href="https://github.com/tomtimusprime/Time-Tracker-v2"
+                    target="_blank">GitHub Code</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- End of Card -->
+    <div class="row row-cols-1 row-cols-md-3">
+      <div class="col mb-4">
+        <div class="card h-100">
+          <img src="./Assets/Images/Eat-Da-Burger.jpg" alt="Eat-Da_Burger" class="card-img-top">
+          <div class="card-body">
+            <div class="text">
+              <h5 class="card-title anchor">Eat-Da-Burger</h5>
+              <p class="card-text">Applications: Handlebars.js, Node.js, MySql, Express, Heroku
+              </p><br><br><br>
+              <div class="row">
+                <div class="col-6 anchor">
+                  <a id="anchor7" class="button" href="https://eat-da-burger-das.herokuapp.com/"
+                    target="_blank">Website</a>
+                </div>
+                <div class="col-6 anchor">
+                  <a id="anchor8" class="button" href="https://github.com/dazacher/Eat-Da-Burger" target="_blank">GitHub
+                    Code</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- End of Card -->
+      <div class="col mb-4">
+        <div class="card h-100">
+          <img src="./Assets/Images/Work-Day-Scheduler.jpg" alt="Work Day Scheduler" class="card-img-top">
+          <div class="card-body">
+            <div class="text">
+              <h5 class="card-title anchor">Work Day Scheduler</h5>
+              <p class="card-text">Applications: Bootstrap, HTML, CSS
+              </p>
+              <div class="row">
+                <div class="col-6 anchor">
+                  <a id="anchor9" class="button" href="https://dazacher.github.io/Work_Day_Scheduler/"
+                    target="_blank">Website</a>
+                </div>
+                <div class="col-6 anchor">
+                  <a id="anchor10" class="button" href="https://github.com/dazacher/Work_Day_Scheduler"
+                    target="_blank">GitHub Code</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End of Card -->
+      <div class="col mb-4">
+        <div class="card h-100">
+          <img src="./Assets/Images/OOP-Programming.jpg" alt="OOP-Programming" class="card-img-top">
+          <div class="card-body">
+            <div class="text">
+              <h5 class="card-title anchor">OOP Programming</h5>
+              <p class="card-text">Applications: Inquirer, HTML, JavaScript, CSS
+              </p><br><br><br>
+              <div class="row">
+                <div class="col-12 anchor">
+                  <a id="anchor12" class="button" href="https://github.com/dazacher/OOP-Programming"
+                    target="_blank">GitHub
+                    Code</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End of Card -->
+
+  </div>
+  <!-- <div class="row">
       <div class="col-sm-6 col-xs-12">
         <div class="box1">
           <img src="./Assets/Images/Trivia-with-Friends.jpg" alt="Trivia with Friends"><br>
           <div class="text">
-            <h5>Trivia with Friends</h5>
-            <!-- Links to GitHub deployed website and github code -->
-            <!-- <button class="btn btnPortfolio" type="submit" id="triviaGithub">Deployed Website</button> -->
-            <div class="row">
+            <h5>Trivia with Friends</h5> -->
+  <!-- Links to GitHub deployed website and github code -->
+  <!-- <button class="btn btnPortfolio" type="submit" id="triviaGithub">Deployed Website</button> -->
+  <!-- <div class="row">
               <div class="col-6 anchor">
                 <a id="anchor1" class="button" href="https://dazacher.github.io/Trivia-With-Friends/"
                   target="_blank">Deployed
@@ -83,15 +232,15 @@
             <p>Applications: Bulma CSS, jQuery, API's, SoundManager2, AJAX, JSON, Git Bash, GitHub</p>
           </div>
         </div>
-      </div>
-      <!-- Second picture on my portfolio page. -->
-      <div class="col-sm-6 col-xs-12">
+      </div> -->
+  <!-- Second picture on my portfolio page. -->
+  <!-- <div class="col-sm-6 col-xs-12">
         <div class="box2">
           <img src="./Assets/Images/Weather-Dashboard.jpg" alt="Weather Dashboard">
           <div class="text">
-            <h5>Weather Dashboard</h5>
-            <!-- Links to GitHub deployed website and github code -->
-            <div class="row">
+            <h5>Weather Dashboard</h5> -->
+  <!-- Links to GitHub deployed website and github code -->
+  <!-- <div class="row">
               <div class="col-6 anchor">
                 <a id="anchor3" class="button" href="https://dazacher.github.io/Weather-Dashboard/"
                   target="_blank">Deployed
@@ -107,99 +256,99 @@
           </div>
         </div>
       </div>
-    </div>
-    <!-- Third picture on my portfolio page. -->
-    <div class="row">
-      <div class="col-sm-6 col-xs-12">
-        <div class="box3">
-          <img src="./Assets/Images/TimeTracker.png" alt="Time Tracker">
-          <div class="text">
-            <h5>Time Tracker</h5>
-            <!-- Links to GitHub deployed website and github code -->
-            <div class="row">
-              <div class="col-6 anchor">
-                <a id="anchor5" class="button" href="https://time-tracker-v-2.herokuapp.com/login"
-                  target="_blank">Deployed
-                  Website</a>
-              </div>
-              <div class="col-6 anchor">
-                <a id="anchor6" class="button" href="https://github.com/tomtimusprime/Time-Tracker-v2"
-                  target="_blank">GitHub Code</a>
-              </div>
+    </div> -->
+  <!-- Third picture on my portfolio page. -->
+  <!-- <div class="row">
+    <div class="col-sm-6 col-xs-12">
+      <div class="box3">
+        <img src="./Assets/Images/TimeTracker.png" alt="Time Tracker">
+        <div class="text">
+          <h5>Time Tracker</h5> -->
+  <!-- Links to GitHub deployed website and github code -->
+  <!-- <div class="row">
+            <div class="col-6 anchor">
+              <a id="anchor5" class="button" href="https://time-tracker-v-2.herokuapp.com/login"
+                target="_blank">Deployed
+                Website</a>
             </div>
-            <p>Applications: Node.js, Express.js, MySql, Sequelize, Travis CI/CD, Passport.js, ESLint, Moment, bCrypt,
-              CSS, HTML, Bootstrap, JavaScript, API’s, AJAX, JSON, Git Bash, GitHub, Heroku, JawsDB </p>
+            <div class="col-6 anchor">
+              <a id="anchor6" class="button" href="https://github.com/tomtimusprime/Time-Tracker-v2"
+                target="_blank">GitHub Code</a>
+            </div>
           </div>
+          <p>Applications: Node.js, Express.js, MySql, Sequelize, Travis CI/CD, Passport.js, ESLint, Moment,
+            bCrypt,
+            CSS, HTML, Bootstrap, JavaScript, API’s, AJAX, JSON, Git Bash, GitHub, Heroku, JawsDB </p>
         </div>
       </div>
-      <!-- Fourth picture on my portfolio page.t-->
+    </div> -->
+  <!-- Fourth picture on my portfolio page.t-->
 
-      <div class="col-sm-6 col-xs-12">
-        <div class="box4">
-          <img src="./Assets/Images/Eat-Da-Burger.jpg" alt="Eat-Da_Burger">
-          <div class="text">
-            <h5>Eat-Da-Burger</h5>
-            <!-- Links to GitHub deployed website and github code -->
-            <div class="row">
-              <div class="col-6 anchor">
-                <a id="anchor7" class="button" href="https://eat-da-burger-das.herokuapp.com/" target="_blank">Deployed
-                  Website</a>
-              </div>
-              <div class="col-6 anchor">
-                <a id="anchor8" class="button" href="https://github.com/dazacher/Eat-Da-Burger" target="_blank">GitHub
-                  Code</a>
-              </div>
-            </div>
-            <p>Applications: Handlebars.js, Node.js, MySql, Express, Heroku</p>
+  <!-- <div class="col-sm-6 col-xs-12">
+    <div class="box4">
+      <img src="./Assets/Images/Eat-Da-Burger.jpg" alt="Eat-Da_Burger">
+      <div class="text">
+        <h5>Eat-Da-Burger</h5> -->
+  <!-- Links to GitHub deployed website and github code -->
+  <!-- <div class="row">
+          <div class="col-6 anchor">
+            <a id="anchor7" class="button" href="https://eat-da-burger-das.herokuapp.com/" target="_blank">Deployed
+              Website</a>
+          </div>
+          <div class="col-6 anchor">
+            <a id="anchor8" class="button" href="https://github.com/dazacher/Eat-Da-Burger" target="_blank">GitHub
+              Code</a>
           </div>
         </div>
-      </div>
-    </div>
-    <!-- Link to my fifth picture -->
-    <div class="row">
-      <div class="col-sm-6 col-xs-12">
-        <div class="box5">
-          <img src="./Assets/Images/Work-Day-Scheduler.jpg" alt="Work Day Scheduler"><br>
-          <div class="text">
-            <h5>Work Day Scheduler</h5>
-            <!-- Links to GitHub deployed website and github code -->
-            <div class="row">
-              <div class="col-6 anchor">
-                <a id="anchor9" class="button" href="https://dazacher.github.io/Work_Day_Scheduler/"
-                  target="_blank">Deployed
-                  Website</a>
-              </div>
-              <div class="col-6 anchor">
-                <a id="anchor10" class="button" href="https://github.com/dazacher/Work_Day_Scheduler"
-                  target="_blank">GitHub Code</a>
-              </div>
-            </div>
-            <p>Applications: Bootstrap, HTML, CSS </p>
-          </div>
-        </div>
-      </div>
-      <!-- Sixth picture on my portfolio page. -->
-      <div class="col-sm-6 col-xs-12">
-        <div class="box6">
-          <img src="./Assets/Images/OOP-Programming.jpg" alt="OOP-Programming">
-          <div class="text">
-            <h5>OOP Programming</h5>
-            <!--Link github code -->
-            <!-- <a id="anchor11" href="" target="_blank">Deployed Website</a><br> -->
-            <div class="row">
-              <div class="col-12 anchor">
-                <a id="anchor12" class="button" href="https://github.com/dazacher/OOP-Programming"
-                  target="_blank">GitHub
-                  Code</a>
-              </div>
-            </div>
-            <p>Applications: Inquirer, HTML, JavaScript, CSS</p>
-          </div>
-        </div>
+        <p>Applications: Handlebars.js, Node.js, MySql, Express, Heroku</p>
       </div>
     </div>
   </div>
-  
+  </div> -->
+  <!-- Link to my fifth picture -->
+  <!-- <div class="row">
+    <div class="col-sm-6 col-xs-12">
+      <div class="box5">
+        <img src="./Assets/Images/Work-Day-Scheduler.jpg" alt="Work Day Scheduler"><br>
+        <div class="text">
+          <h5>Work Day Scheduler</h5> -->
+  <!-- Links to GitHub deployed website and github code -->
+  <!-- <div class="row">
+            <div class="col-6 anchor">
+              <a id="anchor9" class="button" href="https://dazacher.github.io/Work_Day_Scheduler/"
+                target="_blank">Deployed
+                Website</a>
+            </div>
+            <div class="col-6 anchor">
+              <a id="anchor10" class="button" href="https://github.com/dazacher/Work_Day_Scheduler"
+                target="_blank">GitHub Code</a>
+            </div>
+          </div>
+          <p>Applications: Bootstrap, HTML, CSS </p>
+        </div>
+      </div>
+    </div> -->
+  <!-- Sixth picture on my portfolio page. -->
+  <!-- <div class="col-sm-6 col-xs-12">
+      <div class="box6">
+        <img src="./Assets/Images/OOP-Programming.jpg" alt="OOP-Programming">
+        <div class="text">
+          <h5>OOP Programming</h5> -->
+  <!--Link github code -->
+  <!-- <a id="anchor11" href="" target="_blank">Deployed Website</a><br> -->
+  <!-- <div class="row">
+            <div class="col-12 anchor">
+              <a id="anchor12" class="button" href="https://github.com/dazacher/OOP-Programming" target="_blank">GitHub
+                Code</a>
+            </div>
+          </div>
+          <p>Applications: Inquirer, HTML, JavaScript, CSS</p>
+        </div>
+      </div>
+    </div> -->
+  <!-- </div> -->
+  </div>
+
 </body>
 
 </html>
